Orpie ChangeLog
------------------------------------------------------------------------

v1.4

   2004-07-19        Implemented automatic key bindings.

                     Changed operation "function_rand" to "command_rand"
                     because it does not take an argument.


v1.3

   2004-07-22        Ocaml 3.08 support: an include string is provided
                     to the compiler when building curses bindings.

                     Added a fix for a possible crash when drawing
                     help panel and using a custom minimalist
                     orpierc.

   2004-07-18        User variables are now evaluated before being
                     passed as arguments to var().

   2004-07-17        Version 1.3.0 release.

                     Added permutation function and random number
                     generator.

                     Implemented common single-variable statistics
                     functions, and an upper tail normal probability
                     function.

   2004-07-16        Included "register" variable shortcut macros in
                     orpierc.
                     
                     Added a configuration option to conserve memory
                     by turning off string caching.

                     Added a background thread that precomputes
                     string representations of stack elements.

   2004-07-13        Implemented memoization of string representations
                     for stack elements.

   2004-07-08        Replaced general integer base conversion algorithm 
                     with fast (N*log(N) or better) divide-and-
                     -conquer algorithms.

   2004-07-04        Added binomial coefficient function.

   2004-07-03        Added LCM function.

   2004-06-27        Implemented a method for handling interruptible
                     computations.

                     Added exact factorial and GCD functions.


v1.2
